--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 /.idea/vcs.xml
 /.idea/workspace.xml
 /.idea/AdventofCode.iml
+/2019/data_files/
+/2020/data_files/
+/2021_Python/data_files/
+/2022/data_files/
